--- a/client/public/css/grid.css
+++ b/client/public/css/grid.css
@@ -1,33 +1,37 @@
 .grid-container {
-	display: grid;
-	grid-template-columns: repeat(26, [col-start] 1fr);
-	grid-template-rows: repeat(100, [row-start] 1fr);
-	grid-column-gap: 1px;
-	grid-row-gap: 1px;
-	justify-items: start;
-	align-items: start;
+   display: grid;
+   grid-template-columns: repeat(26, [col-start] 1fr);
+   grid-template-rows: repeat(100, [row-start] 1fr);
+   grid-column-gap: 1px;
+   grid-row-gap: 1px;
+   justify-items: start;
+   align-items: start;
 }
 
 .grid-item {
-	grid-column: span 1;
-	grid-row: span 1;
-	width: 100%;
-	height: 100%;
-	padding: 1%;
+   grid-column: span 1;
+   grid-row: span 1;
+   width: 100%;
+   height: 100%;
+   padding: 1%;
 }
 
 .top.border {
-	border-top: 1px solid #a5cacf;
+   border-top: 1px solid #a5cacf;
 }
 
 .left.border {
-	border-left: 1px solid #a5cacf;
+   border-left: 1px solid #a5cacf;
 }
 
 .right.border {
-	border-right: 1px solid #a5cacf;
+   border-right: 1px solid #a5cacf;
 }
 
 .bottom.border {
-	border-bottom: 1px solid #a5cacf;
+   border-bottom: 1px solid #a5cacf;
+}
+
+.pointer {
+   cursor: pointer;
 }
