part way through getting test coverage

--- a/client/public/css/grid.css
+++ b/client/public/css/grid.css
@@ -44,6 +44,11 @@
    border-bottom: 1px solid #a5cacf;
 }
 
+.summary-cell-container {
+   border: 1px solid #d17e19;
+   padding: 1%;
+}
+
 .pointer {
    cursor: pointer;
 }
