--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -95,6 +95,10 @@ h5 {
    color: #32a8b8;
 }
 
+.burnt-orange {
+   color: #d17e19;
+}
+
 /* header
 ==================================================*/
 .edit-title-container {
