--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -111,6 +111,12 @@ h5 {
    margin-bottom: 1vh;
 }
 
+/* misc
+==================================================*/
+.pointer {
+   cursor: pointer;
+}
+
 /* footer
 ==================================================*/
 .footer {
