more refactoring to use tailwindcss and atomic design

--- a/client/src/css/tailwind.css
+++ b/client/src/css/tailwind.css
@@ -11940,6 +11940,10 @@ video {
   text-align: center;
 }
 
+.pointer {
+  cursor: pointer;
+}
+
 @media (min-width: 640px) {
   .sm\:sr-only {
     position: absolute;
