--- a/client/src/css/tailwind.src.css
+++ b/client/src/css/tailwind.src.css
@@ -1,7 +1,7 @@
 @tailwind base;
 
 * {
-   @apply font-sans;
+	@apply font-sans;
 }
 
 @tailwind components;
@@ -9,26 +9,30 @@
 
 /* TODO this grid stuff is breaking the atomic approach to classes so need to fix that */
 .grid-container {
-   display: grid;
-   grid-column-gap: 0;
-   grid-row-gap: 0;
-   justify-items: start;
-   align-items: start;
+	display: grid;
+	grid-column-gap: 0;
+	grid-row-gap: 0;
+	justify-items: start;
+	align-items: start;
 }
 
 .grid-item {
-   grid-column: span 1;
-   grid-row: span 1;
-   width: 100%;
-   height: 100%;
-   padding: 1%;
+	grid-column: span 1;
+	grid-row: span 1;
+	width: 100%;
+	height: 100%;
+	padding: 1%;
 }
 
 .grid-header-item {
-   grid-column: span 1;
-   grid-row: span 1;
-   width: 100%;
-   padding: 1%;
-   vertical-align: middle;
-   text-align: center;
+	grid-column: span 1;
+	grid-row: span 1;
+	width: 100%;
+	padding: 1%;
+	vertical-align: middle;
+	text-align: center;
+}
+
+.pointer {
+	cursor: pointer;
 }
