--- a/client/src/css/tailwind.css
+++ b/client/src/css/tailwind.css
@@ -10063,6 +10063,41 @@ video {
   left: auto;
 }
 
+.inset-1\/4 {
+  top: 25%;
+  right: 25%;
+  bottom: 25%;
+  left: 25%;
+}
+
+.inset-1\/3 {
+  top: 33%;
+  right: 33%;
+  bottom: 33%;
+  left: 33%;
+}
+
+.inset-1\/2 {
+  top: 50%;
+  right: 50%;
+  bottom: 50%;
+  left: 50%;
+}
+
+.inset-2\/3 {
+  top: 67%;
+  right: 67%;
+  bottom: 67%;
+  left: 67%;
+}
+
+.inset-3\/4 {
+  top: 75%;
+  right: 75%;
+  bottom: 75%;
+  left: 75%;
+}
+
 .inset-y-0 {
   top: 0;
   bottom: 0;
@@ -10081,6 +10116,56 @@ video {
 .inset-x-auto {
   right: auto;
   left: auto;
+}
+
+.inset-y-1\/4 {
+  top: 25%;
+  bottom: 25%;
+}
+
+.inset-x-1\/4 {
+  right: 25%;
+  left: 25%;
+}
+
+.inset-y-1\/3 {
+  top: 33%;
+  bottom: 33%;
+}
+
+.inset-x-1\/3 {
+  right: 33%;
+  left: 33%;
+}
+
+.inset-y-1\/2 {
+  top: 50%;
+  bottom: 50%;
+}
+
+.inset-x-1\/2 {
+  right: 50%;
+  left: 50%;
+}
+
+.inset-y-2\/3 {
+  top: 67%;
+  bottom: 67%;
+}
+
+.inset-x-2\/3 {
+  right: 67%;
+  left: 67%;
+}
+
+.inset-y-3\/4 {
+  top: 75%;
+  bottom: 75%;
+}
+
+.inset-x-3\/4 {
+  right: 75%;
+  left: 75%;
 }
 
 .top-0 {
@@ -10113,6 +10198,86 @@ video {
 
 .left-auto {
   left: auto;
+}
+
+.top-1\/4 {
+  top: 25%;
+}
+
+.right-1\/4 {
+  right: 25%;
+}
+
+.bottom-1\/4 {
+  bottom: 25%;
+}
+
+.left-1\/4 {
+  left: 25%;
+}
+
+.top-1\/3 {
+  top: 33%;
+}
+
+.right-1\/3 {
+  right: 33%;
+}
+
+.bottom-1\/3 {
+  bottom: 33%;
+}
+
+.left-1\/3 {
+  left: 33%;
+}
+
+.top-1\/2 {
+  top: 50%;
+}
+
+.right-1\/2 {
+  right: 50%;
+}
+
+.bottom-1\/2 {
+  bottom: 50%;
+}
+
+.left-1\/2 {
+  left: 50%;
+}
+
+.top-2\/3 {
+  top: 67%;
+}
+
+.right-2\/3 {
+  right: 67%;
+}
+
+.bottom-2\/3 {
+  bottom: 67%;
+}
+
+.left-2\/3 {
+  left: 67%;
+}
+
+.top-3\/4 {
+  top: 75%;
+}
+
+.right-3\/4 {
+  right: 75%;
+}
+
+.bottom-3\/4 {
+  bottom: 75%;
+}
+
+.left-3\/4 {
+  left: 75%;
 }
 
 .resize-none {
@@ -21373,6 +21538,41 @@ video {
     left: auto;
   }
 
+  .sm\:inset-1\/4 {
+    top: 25%;
+    right: 25%;
+    bottom: 25%;
+    left: 25%;
+  }
+
+  .sm\:inset-1\/3 {
+    top: 33%;
+    right: 33%;
+    bottom: 33%;
+    left: 33%;
+  }
+
+  .sm\:inset-1\/2 {
+    top: 50%;
+    right: 50%;
+    bottom: 50%;
+    left: 50%;
+  }
+
+  .sm\:inset-2\/3 {
+    top: 67%;
+    right: 67%;
+    bottom: 67%;
+    left: 67%;
+  }
+
+  .sm\:inset-3\/4 {
+    top: 75%;
+    right: 75%;
+    bottom: 75%;
+    left: 75%;
+  }
+
   .sm\:inset-y-0 {
     top: 0;
     bottom: 0;
@@ -21391,6 +21591,56 @@ video {
   .sm\:inset-x-auto {
     right: auto;
     left: auto;
+  }
+
+  .sm\:inset-y-1\/4 {
+    top: 25%;
+    bottom: 25%;
+  }
+
+  .sm\:inset-x-1\/4 {
+    right: 25%;
+    left: 25%;
+  }
+
+  .sm\:inset-y-1\/3 {
+    top: 33%;
+    bottom: 33%;
+  }
+
+  .sm\:inset-x-1\/3 {
+    right: 33%;
+    left: 33%;
+  }
+
+  .sm\:inset-y-1\/2 {
+    top: 50%;
+    bottom: 50%;
+  }
+
+  .sm\:inset-x-1\/2 {
+    right: 50%;
+    left: 50%;
+  }
+
+  .sm\:inset-y-2\/3 {
+    top: 67%;
+    bottom: 67%;
+  }
+
+  .sm\:inset-x-2\/3 {
+    right: 67%;
+    left: 67%;
+  }
+
+  .sm\:inset-y-3\/4 {
+    top: 75%;
+    bottom: 75%;
+  }
+
+  .sm\:inset-x-3\/4 {
+    right: 75%;
+    left: 75%;
   }
 
   .sm\:top-0 {
@@ -21423,6 +21673,86 @@ video {
 
   .sm\:left-auto {
     left: auto;
+  }
+
+  .sm\:top-1\/4 {
+    top: 25%;
+  }
+
+  .sm\:right-1\/4 {
+    right: 25%;
+  }
+
+  .sm\:bottom-1\/4 {
+    bottom: 25%;
+  }
+
+  .sm\:left-1\/4 {
+    left: 25%;
+  }
+
+  .sm\:top-1\/3 {
+    top: 33%;
+  }
+
+  .sm\:right-1\/3 {
+    right: 33%;
+  }
+
+  .sm\:bottom-1\/3 {
+    bottom: 33%;
+  }
+
+  .sm\:left-1\/3 {
+    left: 33%;
+  }
+
+  .sm\:top-1\/2 {
+    top: 50%;
+  }
+
+  .sm\:right-1\/2 {
+    right: 50%;
+  }
+
+  .sm\:bottom-1\/2 {
+    bottom: 50%;
+  }
+
+  .sm\:left-1\/2 {
+    left: 50%;
+  }
+
+  .sm\:top-2\/3 {
+    top: 67%;
+  }
+
+  .sm\:right-2\/3 {
+    right: 67%;
+  }
+
+  .sm\:bottom-2\/3 {
+    bottom: 67%;
+  }
+
+  .sm\:left-2\/3 {
+    left: 67%;
+  }
+
+  .sm\:top-3\/4 {
+    top: 75%;
+  }
+
+  .sm\:right-3\/4 {
+    right: 75%;
+  }
+
+  .sm\:bottom-3\/4 {
+    bottom: 75%;
+  }
+
+  .sm\:left-3\/4 {
+    left: 75%;
   }
 
   .sm\:resize-none {
@@ -32652,6 +32982,41 @@ video {
     left: auto;
   }
 
+  .md\:inset-1\/4 {
+    top: 25%;
+    right: 25%;
+    bottom: 25%;
+    left: 25%;
+  }
+
+  .md\:inset-1\/3 {
+    top: 33%;
+    right: 33%;
+    bottom: 33%;
+    left: 33%;
+  }
+
+  .md\:inset-1\/2 {
+    top: 50%;
+    right: 50%;
+    bottom: 50%;
+    left: 50%;
+  }
+
+  .md\:inset-2\/3 {
+    top: 67%;
+    right: 67%;
+    bottom: 67%;
+    left: 67%;
+  }
+
+  .md\:inset-3\/4 {
+    top: 75%;
+    right: 75%;
+    bottom: 75%;
+    left: 75%;
+  }
+
   .md\:inset-y-0 {
     top: 0;
     bottom: 0;
@@ -32670,6 +33035,56 @@ video {
   .md\:inset-x-auto {
     right: auto;
     left: auto;
+  }
+
+  .md\:inset-y-1\/4 {
+    top: 25%;
+    bottom: 25%;
+  }
+
+  .md\:inset-x-1\/4 {
+    right: 25%;
+    left: 25%;
+  }
+
+  .md\:inset-y-1\/3 {
+    top: 33%;
+    bottom: 33%;
+  }
+
+  .md\:inset-x-1\/3 {
+    right: 33%;
+    left: 33%;
+  }
+
+  .md\:inset-y-1\/2 {
+    top: 50%;
+    bottom: 50%;
+  }
+
+  .md\:inset-x-1\/2 {
+    right: 50%;
+    left: 50%;
+  }
+
+  .md\:inset-y-2\/3 {
+    top: 67%;
+    bottom: 67%;
+  }
+
+  .md\:inset-x-2\/3 {
+    right: 67%;
+    left: 67%;
+  }
+
+  .md\:inset-y-3\/4 {
+    top: 75%;
+    bottom: 75%;
+  }
+
+  .md\:inset-x-3\/4 {
+    right: 75%;
+    left: 75%;
   }
 
   .md\:top-0 {
@@ -32702,6 +33117,86 @@ video {
 
   .md\:left-auto {
     left: auto;
+  }
+
+  .md\:top-1\/4 {
+    top: 25%;
+  }
+
+  .md\:right-1\/4 {
+    right: 25%;
+  }
+
+  .md\:bottom-1\/4 {
+    bottom: 25%;
+  }
+
+  .md\:left-1\/4 {
+    left: 25%;
+  }
+
+  .md\:top-1\/3 {
+    top: 33%;
+  }
+
+  .md\:right-1\/3 {
+    right: 33%;
+  }
+
+  .md\:bottom-1\/3 {
+    bottom: 33%;
+  }
+
+  .md\:left-1\/3 {
+    left: 33%;
+  }
+
+  .md\:top-1\/2 {
+    top: 50%;
+  }
+
+  .md\:right-1\/2 {
+    right: 50%;
+  }
+
+  .md\:bottom-1\/2 {
+    bottom: 50%;
+  }
+
+  .md\:left-1\/2 {
+    left: 50%;
+  }
+
+  .md\:top-2\/3 {
+    top: 67%;
+  }
+
+  .md\:right-2\/3 {
+    right: 67%;
+  }
+
+  .md\:bottom-2\/3 {
+    bottom: 67%;
+  }
+
+  .md\:left-2\/3 {
+    left: 67%;
+  }
+
+  .md\:top-3\/4 {
+    top: 75%;
+  }
+
+  .md\:right-3\/4 {
+    right: 75%;
+  }
+
+  .md\:bottom-3\/4 {
+    bottom: 75%;
+  }
+
+  .md\:left-3\/4 {
+    left: 75%;
   }
 
   .md\:resize-none {
@@ -43931,6 +44426,41 @@ video {
     left: auto;
   }
 
+  .lg\:inset-1\/4 {
+    top: 25%;
+    right: 25%;
+    bottom: 25%;
+    left: 25%;
+  }
+
+  .lg\:inset-1\/3 {
+    top: 33%;
+    right: 33%;
+    bottom: 33%;
+    left: 33%;
+  }
+
+  .lg\:inset-1\/2 {
+    top: 50%;
+    right: 50%;
+    bottom: 50%;
+    left: 50%;
+  }
+
+  .lg\:inset-2\/3 {
+    top: 67%;
+    right: 67%;
+    bottom: 67%;
+    left: 67%;
+  }
+
+  .lg\:inset-3\/4 {
+    top: 75%;
+    right: 75%;
+    bottom: 75%;
+    left: 75%;
+  }
+
   .lg\:inset-y-0 {
     top: 0;
     bottom: 0;
@@ -43949,6 +44479,56 @@ video {
   .lg\:inset-x-auto {
     right: auto;
     left: auto;
+  }
+
+  .lg\:inset-y-1\/4 {
+    top: 25%;
+    bottom: 25%;
+  }
+
+  .lg\:inset-x-1\/4 {
+    right: 25%;
+    left: 25%;
+  }
+
+  .lg\:inset-y-1\/3 {
+    top: 33%;
+    bottom: 33%;
+  }
+
+  .lg\:inset-x-1\/3 {
+    right: 33%;
+    left: 33%;
+  }
+
+  .lg\:inset-y-1\/2 {
+    top: 50%;
+    bottom: 50%;
+  }
+
+  .lg\:inset-x-1\/2 {
+    right: 50%;
+    left: 50%;
+  }
+
+  .lg\:inset-y-2\/3 {
+    top: 67%;
+    bottom: 67%;
+  }
+
+  .lg\:inset-x-2\/3 {
+    right: 67%;
+    left: 67%;
+  }
+
+  .lg\:inset-y-3\/4 {
+    top: 75%;
+    bottom: 75%;
+  }
+
+  .lg\:inset-x-3\/4 {
+    right: 75%;
+    left: 75%;
   }
 
   .lg\:top-0 {
@@ -43981,6 +44561,86 @@ video {
 
   .lg\:left-auto {
     left: auto;
+  }
+
+  .lg\:top-1\/4 {
+    top: 25%;
+  }
+
+  .lg\:right-1\/4 {
+    right: 25%;
+  }
+
+  .lg\:bottom-1\/4 {
+    bottom: 25%;
+  }
+
+  .lg\:left-1\/4 {
+    left: 25%;
+  }
+
+  .lg\:top-1\/3 {
+    top: 33%;
+  }
+
+  .lg\:right-1\/3 {
+    right: 33%;
+  }
+
+  .lg\:bottom-1\/3 {
+    bottom: 33%;
+  }
+
+  .lg\:left-1\/3 {
+    left: 33%;
+  }
+
+  .lg\:top-1\/2 {
+    top: 50%;
+  }
+
+  .lg\:right-1\/2 {
+    right: 50%;
+  }
+
+  .lg\:bottom-1\/2 {
+    bottom: 50%;
+  }
+
+  .lg\:left-1\/2 {
+    left: 50%;
+  }
+
+  .lg\:top-2\/3 {
+    top: 67%;
+  }
+
+  .lg\:right-2\/3 {
+    right: 67%;
+  }
+
+  .lg\:bottom-2\/3 {
+    bottom: 67%;
+  }
+
+  .lg\:left-2\/3 {
+    left: 67%;
+  }
+
+  .lg\:top-3\/4 {
+    top: 75%;
+  }
+
+  .lg\:right-3\/4 {
+    right: 75%;
+  }
+
+  .lg\:bottom-3\/4 {
+    bottom: 75%;
+  }
+
+  .lg\:left-3\/4 {
+    left: 75%;
   }
 
   .lg\:resize-none {
@@ -55210,6 +55870,41 @@ video {
     left: auto;
   }
 
+  .xl\:inset-1\/4 {
+    top: 25%;
+    right: 25%;
+    bottom: 25%;
+    left: 25%;
+  }
+
+  .xl\:inset-1\/3 {
+    top: 33%;
+    right: 33%;
+    bottom: 33%;
+    left: 33%;
+  }
+
+  .xl\:inset-1\/2 {
+    top: 50%;
+    right: 50%;
+    bottom: 50%;
+    left: 50%;
+  }
+
+  .xl\:inset-2\/3 {
+    top: 67%;
+    right: 67%;
+    bottom: 67%;
+    left: 67%;
+  }
+
+  .xl\:inset-3\/4 {
+    top: 75%;
+    right: 75%;
+    bottom: 75%;
+    left: 75%;
+  }
+
   .xl\:inset-y-0 {
     top: 0;
     bottom: 0;
@@ -55228,6 +55923,56 @@ video {
   .xl\:inset-x-auto {
     right: auto;
     left: auto;
+  }
+
+  .xl\:inset-y-1\/4 {
+    top: 25%;
+    bottom: 25%;
+  }
+
+  .xl\:inset-x-1\/4 {
+    right: 25%;
+    left: 25%;
+  }
+
+  .xl\:inset-y-1\/3 {
+    top: 33%;
+    bottom: 33%;
+  }
+
+  .xl\:inset-x-1\/3 {
+    right: 33%;
+    left: 33%;
+  }
+
+  .xl\:inset-y-1\/2 {
+    top: 50%;
+    bottom: 50%;
+  }
+
+  .xl\:inset-x-1\/2 {
+    right: 50%;
+    left: 50%;
+  }
+
+  .xl\:inset-y-2\/3 {
+    top: 67%;
+    bottom: 67%;
+  }
+
+  .xl\:inset-x-2\/3 {
+    right: 67%;
+    left: 67%;
+  }
+
+  .xl\:inset-y-3\/4 {
+    top: 75%;
+    bottom: 75%;
+  }
+
+  .xl\:inset-x-3\/4 {
+    right: 75%;
+    left: 75%;
   }
 
   .xl\:top-0 {
@@ -55260,6 +56005,86 @@ video {
 
   .xl\:left-auto {
     left: auto;
+  }
+
+  .xl\:top-1\/4 {
+    top: 25%;
+  }
+
+  .xl\:right-1\/4 {
+    right: 25%;
+  }
+
+  .xl\:bottom-1\/4 {
+    bottom: 25%;
+  }
+
+  .xl\:left-1\/4 {
+    left: 25%;
+  }
+
+  .xl\:top-1\/3 {
+    top: 33%;
+  }
+
+  .xl\:right-1\/3 {
+    right: 33%;
+  }
+
+  .xl\:bottom-1\/3 {
+    bottom: 33%;
+  }
+
+  .xl\:left-1\/3 {
+    left: 33%;
+  }
+
+  .xl\:top-1\/2 {
+    top: 50%;
+  }
+
+  .xl\:right-1\/2 {
+    right: 50%;
+  }
+
+  .xl\:bottom-1\/2 {
+    bottom: 50%;
+  }
+
+  .xl\:left-1\/2 {
+    left: 50%;
+  }
+
+  .xl\:top-2\/3 {
+    top: 67%;
+  }
+
+  .xl\:right-2\/3 {
+    right: 67%;
+  }
+
+  .xl\:bottom-2\/3 {
+    bottom: 67%;
+  }
+
+  .xl\:left-2\/3 {
+    left: 67%;
+  }
+
+  .xl\:top-3\/4 {
+    top: 75%;
+  }
+
+  .xl\:right-3\/4 {
+    right: 75%;
+  }
+
+  .xl\:bottom-3\/4 {
+    bottom: 75%;
+  }
+
+  .xl\:left-3\/4 {
+    left: 75%;
   }
 
   .xl\:resize-none {
