tidied up grid display

--- a/client/src/css/tailwind.css
+++ b/client/src/css/tailwind.css
@@ -12164,7 +12164,8 @@ video {
           align-items: start;
 }
 
-.grid-item {
+.grid-item,
+.grid-header-item {
   grid-column: span 1;
   grid-row: span 1;
   width: 100%;
@@ -12173,10 +12174,6 @@ video {
 }
 
 .grid-header-item {
-  grid-column: span 1;
-  grid-row: span 1;
-  width: 100%;
-  padding: 1%;
   vertical-align: middle;
   text-align: center;
 }
