--- a/client/src/css/tailwind.css
+++ b/client/src/css/tailwind.css
@@ -3551,6 +3551,14 @@ video {
   cursor: not-allowed;
 }
 
+.cursor-row-resize {
+  cursor: row-resize;
+}
+
+.cursor-col-resize {
+  cursor: col-resize;
+}
+
 .block {
   display: block;
 }
@@ -12178,10 +12186,6 @@ video {
   text-align: center;
 }
 
-.pointer {
-  cursor: pointer;
-}
-
 @media (min-width: 640px) {
   .sm\:sr-only {
     position: absolute;
@@ -15097,6 +15101,14 @@ video {
 
   .sm\:cursor-not-allowed {
     cursor: not-allowed;
+  }
+
+  .sm\:cursor-row-resize {
+    cursor: row-resize;
+  }
+
+  .sm\:cursor-col-resize {
+    cursor: col-resize;
   }
 
   .sm\:block {
@@ -26619,6 +26631,14 @@ video {
     cursor: not-allowed;
   }
 
+  .md\:cursor-row-resize {
+    cursor: row-resize;
+  }
+
+  .md\:cursor-col-resize {
+    cursor: col-resize;
+  }
+
   .md\:block {
     display: block;
   }
@@ -38139,6 +38159,14 @@ video {
     cursor: not-allowed;
   }
 
+  .lg\:cursor-row-resize {
+    cursor: row-resize;
+  }
+
+  .lg\:cursor-col-resize {
+    cursor: col-resize;
+  }
+
   .lg\:block {
     display: block;
   }
@@ -49657,6 +49685,14 @@ video {
 
   .xl\:cursor-not-allowed {
     cursor: not-allowed;
+  }
+
+  .xl\:cursor-row-resize {
+    cursor: row-resize;
+  }
+
+  .xl\:cursor-col-resize {
+    cursor: col-resize;
   }
 
   .xl\:block {
