--- a/client/src/css/tailwind.src.css
+++ b/client/src/css/tailwind.src.css
@@ -1,31 +1,35 @@
 @tailwind base;
 
 * {
-	@apply font-sans;
+   @apply font-sans;
 }
 
 @tailwind components;
 @tailwind utilities;
 
 /* TODO this grid stuff is breaking the atomic approach to classes so need to fix that */
+
+/*! purgecss ignore */
 .grid-container {
-	display: grid;
-	grid-column-gap: 0;
-	grid-row-gap: 0;
-	justify-items: start;
-	align-items: start;
+   display: grid;
+   grid-column-gap: 0;
+   grid-row-gap: 0;
+   justify-items: start;
+   align-items: start;
 }
 
+/*! purgecss ignore */
 .grid-item,
 .grid-header-item {
-	grid-column: span 1;
-	grid-row: span 1;
-	width: 100%;
-	height: 100%;
-	padding: 1%;
+   grid-column: span 1;
+   grid-row: span 1;
+   width: 100%;
+   height: 100%;
+   padding: 1%;
 }
 
+/*! purgecss ignore */
 .grid-header-item {
-	vertical-align: middle;
-	text-align: center;
+   vertical-align: middle;
+   text-align: center;
 }
